log
Wed, Mar 19, 2025  8:39:35 AM: 
 tests:  0|5
total_score: 0/70
3f6cb15
Wed, Mar 19, 2025  9:11:14 AM: 
 exercises.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int valor = first(L);
                ^~~~~
exercises.c:64:16: error: comparison between pointer and integer [-Werror]
    while(valor != NULL)
                ^~
exercises.c:67:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       valor = next(L) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
ef40a13
Wed, Mar 19, 2025  9:12:16 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int valor = first(L);
                ^~~~~
exercises.c:64:12: error: comparison between pointer and integer [-Werror]
    while(L != -1)
            ^~
exercises.c:67:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       valor = next(L) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
6396a53
Wed, Mar 19, 2025  9:13:39 AM: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int valor = first(L);
                ^~~~~
exercises.c:67:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       valor = next(L) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
f05a3ea
Wed, Mar 19, 2025  9:16:41 AM: 
In file included from test.c:5:0:
exercises.c: In function 'sumaLista':
exercises.c:62:16: error: initialization makes integer from pointer without a cast [-Werror=int-conversion]
    int valor = first(L);
                ^~~~~
exercises.c:67:13: error: assignment makes integer from pointer without a cast [-Werror=int-conversion]
       valor = next(L) ;
             ^
cc1.exe: all warnings being treated as errors
Compilation failed
43191e6
